corrected height on mobile breakpoints

--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -16,9 +16,9 @@
   }
   
   @media (min-width: 320px) and (max-width: 480px) {
-    .outerContainer {
+    /* .outerContainer {
       height: 100%;
-    }
+    } */
   
     .container {
       width: 100%;
