--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -57,9 +57,9 @@ html, body {
   }
   
   @media (min-width: 320px) and (max-width: 480px) {
-    .joinOuterContainer {
+    /* .joinOuterContainer {
       height: 100%;
-    }
+    } */
   
     .joinInnerContainer {
       width: 90%;
